# book_recommendation_system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  schema.yaml  template.py
config/: config.yaml
research/: trials.ipynb
src/book_recommendation_system/: __init__.py
src/book_recommendation_system/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/book_recommendation_system/config/: configuration.py
src/book_recommendation_system/constants/: __init__.py
src/book_recommendation_system/entity/: config_entity.py
src/book_recommendation_system/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py
src/book_recommendation_system/utils/: common.py
static/Info/: recommender_system.md
